--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 					$contentLabel.innerHTML = 'onTouchStart';
 				},
 				onTouchEnd : function( sl ) {
+					$contentLabel.innerHTML = 'onTouchEnd';
 					$content.style.backgroundColor = '#a0d9f6';
 				},
 				onTouchMove : function( sl ) {
