--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 					$contentLabel.innerHTML = 'DOWN';
 				}
 			});
+			
+			if ( swipeListener.isTouchDevice() ) $contentLabel.innerHTML = 'swipe me! (touch device)';
+			else $contentLabel.innerHTML = 'swipe me! (not touch device)';
 		</script>
 	</body>
 	
